--- a/weatherAPI/css/style.css
+++ b/weatherAPI/css/style.css
@@ -3,27 +3,32 @@
 /*******************************************/
 
 /* Box Model Hack */
-*{
+* {
   box-sizing: border-box;
   font-family: "Alegreya Sans", sans-serif;
-  
+
 }
+
 html {
   background-image: url(../img/cloudsBackground.jpg);
   background-size: auto;
+  height: auto;
 }
 
-.inputSection{
+.inputSection {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-input{
+
+input {
   width: 100%;
   text-align: center;
-  border-radius: 50%;
+  border-radius: 10%;
   margin-top: 5%;
+  height: auto;
 }
+
 #tempBtn {
   background: transparent;
 }
@@ -34,6 +39,23 @@ h3,
 p {
   text-align: center;
 }
+
+.introSection>h1 {
+  font-size: 58px;
+}
+
+.introSection>p {
+  font-size: 30px;
+}
+
+.inputSection>input {
+  font-size: 30px;
+}
+
+.resultSection>h3 {
+  font-size: 36px;
+}
+
 /* input {
   display: flex;
   align-items: center;
@@ -50,3 +72,89 @@ p {
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+@media screen and (min-width: 320px) {
+  .introSection>h1 {
+    font-size: 78px;
+  }
+
+  .introSection>p {
+    font-size: 48px;
+  }
+
+  input {
+    font-size: 48px;
+  }
+
+  #placetoPutTemp {
+    font-size: 48px;
+  }
+}
+
+@media screen and (min-width: 820px) {
+  .introSection>h1 {
+    font-size: 58px;
+  }
+
+  .introSection>p {
+    font-size: 28px;
+  }
+
+  input {
+    font-size: 18px;
+  }
+
+  #placetoPutTemp {
+    font-size: 48px;
+  }
+}
+@media screen and (min-width: 988px) {
+  .introSection>h1 {
+    font-size: 58px;
+  }
+
+  .introSection>p {
+    font-size: 28px;
+  }
+
+  input {
+    font-size: 28px;
+  }
+
+  #placetoPutTemp {
+    font-size: 48px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .introSection>h1 {
+    font-size: 58px;
+  }
+
+  .introSection>p {
+    font-size: 28px;
+  }
+
+  input {
+    font-size: 28px;
+  }
+
+  #placetoPutTemp {
+    font-size: 48px;
+  }
+}
+@media screen and (min-width: 1150px) {
+  .introSection>h1 {
+    font-size: 58px;
+  }
+
+  .introSection>p {
+    font-size: 28px;
+  }
+
+  input {
+    font-size: 38px;
+  }
+
+  #placetoPutTemp {
+    font-size: 48px;
+  }
+}
