--- a/weatherAPI/css/style.css
+++ b/weatherAPI/css/style.css
@@ -90,7 +90,7 @@ p {
   }
 }
 
-@media screen and (min-width: 820px) {
+@media screen and (max-width: 820px) {
   .introSection>h1 {
     font-size: 58px;
   }
